--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ nav ul li a:hover {
 
 .hero-text p {
   font-size: 1.5rem;
+  text-align: right;
 }
 
 .cta-button {
@@ -320,14 +321,14 @@ section p {
   padding: 20px;
   border-radius: 2rem;
   text-align: center;
-  border: 4px solid var(--primary-color);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .service:hover {
-  transform: translateY(-4px);
+  transform: translateY(-1rem);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background: var(--hover-color);
 }
 
 .service h3 {
