--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 :root {
-  --primary-color: #0b866d; /* Verde */
-  --secondary-color: #f4f4f4; /* Cinza claro */
-  --third-color: #0c705c; /* Tom neutro */
-  --background-color: #ffffff; /* Branco */
-  --text-color: #0b866d; /* Verde */
-  --hover-color: #0c705c; /* Verde mais claro */
+  --primary-color: #0b866d;
+  --secondary-color: #f4f4f4;
+  --third-color: #0c705c;
+  --background-color: #ffffff;
 }
 
 /* Estilos para a scrollbar */
@@ -35,7 +33,7 @@
 
 body {
   line-height: 1.5;
-  color: var(--text-color);
+  color: var(--primary-color);
   background-color: var(--background-color);
 }
 
@@ -50,9 +48,9 @@ header {
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
 }
 
 /* Navbar padrão (para monitores e telas grandes) */
@@ -66,19 +64,24 @@ nav ul li {
 }
 
 nav ul li a {
-  color: var(--text-color);
+  color: var(--primary-color);
   text-decoration: none;
   padding: 0.5rem 1rem;
   font-size: 1rem;
 }
 
-nav ul li a:hover {
-  color: var(--third-color);
+.fale-conosco {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 2rem;
 }
 
-/* Estilo do ícone do menu hambúrguer */
+.fale-conosco:hover {
+  transform: scale(1.1);
+}
+
 .hamburger {
-  display: none; /* Ocultar no desktop */
+  display: none;
   flex-direction: column;
   cursor: pointer;
   gap: 5px;
@@ -87,12 +90,11 @@ nav ul li a:hover {
 .hamburger span {
   width: 30px;
   height: 3px;
-  background-color: var(--text-color);
+  background-color: var(--primary-color);
 }
 
-/* Navbar responsiva */
 .nav-links {
-  display: flex; /* Ocultar o menu no celular */
+  display: flex;
 }
 
 .nav-links.active {
@@ -105,6 +107,7 @@ nav ul li a:hover {
   width: 100%;
   padding: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  align-items: center;
 }
 
 .nav-links ul {
@@ -183,7 +186,7 @@ nav ul li a:hover {
 }
 
 .cta-button:hover {
-  background: var(--hover-color); /* Verde mais claro */
+  background: var(--third-color); /* Verde mais claro */
   scale: 1.01;
   color: #f1f1f1;
 }
@@ -253,6 +256,14 @@ section#about::before {
 .container-about p {
   font-size: 20px;
 }
+.imagem-incubadora {
+  width: 250px;
+}
+.container-incubadora {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
 /* Sections */
 section {
@@ -290,7 +301,7 @@ section p {
 
 .service {
   background: #ffffff; /* Branco */
-  color: var(--text-color); /* Verde */
+  color: var(--primary-color); /* Verde */
   padding: 20px;
   border-radius: 1rem;
   text-align: center;
@@ -411,12 +422,12 @@ form button {
 }
 
 form button:hover {
-  background: var(--hover-color); /* Verde mais claro */
+  background: var(--third-color); /* Verde mais claro */
 }
 
 form label {
   font-size: 1rem;
-  color: var(--text-color); /* Verde */
+  color: var(--primary-color); /* Verde */
 }
 
 /* Footer */
@@ -450,9 +461,8 @@ footer ul li {
 
 /* Media Queries */
 @media screen and (max-width: 1100px) {
-  /* Ocultar o menu de navegação e mostrar o hambúrguer em dispositivos móveis */
   header {
-    padding: 0px;
+    padding: 0;
     flex-direction: row;
     justify-content: space-around;
   }
@@ -462,9 +472,11 @@ footer ul li {
     flex-direction: column;
     gap: 1rem;
   }
+
   .nav-links {
     display: none; /* Ocultar o menu no celular */
   }
+
   .icons {
     content-visibility: hidden;
   }
@@ -513,7 +525,7 @@ footer ul li {
     text-align: center;
     overflow: hidden;
     transition: 0.3s ease;
-    margin: 0px;
+    margin: 0;
     width: 90%;
   }
 
